--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,14 @@
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+
+        <!-- Status bar color -->
+        <item name="android:statusBarColor">@color/teal_700</item>
+        <item name="android:windowLightStatusBar">false</item> <!-- For light icons -->
+        
+        <!-- This makes your splash screen appear INSTANTLY -->
+        <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
    
 </resources>
